Feat: Add taget=blank to links

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -34,7 +34,7 @@
                     as Bootstrap and Django, as well as databases like PostgreSQL. I enjoy solving complex problems and
                     take a proactive approach to learning new technologies.</p>
 
-                <a href="https://www.linkedin.com/in/kieranchamberskc/" style="font-size: larger;">Connect with me on LinkedIn</a>
+                <a href="https://www.linkedin.com/in/kieranchamberskc/" style="font-size: larger;" target="_blank">Connect with me on LinkedIn</a>
                 <a href="#contact" style="font-size: larger;">Send me a message</a>
 
             </div>
@@ -55,8 +55,8 @@
                                 <div class="card-body">
                                     <p class="h4">GlouGlou Natural Wine Store</p>
                                     <p class="h6"><em>Django, Bootstrap, Cloudinary, Heroku</em></p>
-                                    <a href="https://github.com/klchambers/pp5ecommerce" style="font-size: larger;">GitHub Repository</a><br>
-                                    <a href="https://pp5ecommerce-a72d5065ca06.herokuapp.com/" style="font-size: larger;">Live Site</a>
+                                    <a href="https://github.com/klchambers/pp5ecommerce" style="font-size: larger;" target="_blank">GitHub Repository</a><br>
+                                    <a href="https://pp5ecommerce-a72d5065ca06.herokuapp.com/" style="font-size: larger;" target="_blank">Live Site</a>
                                 </div>
                             </div>
                         </div>
@@ -70,8 +70,8 @@
                                 <div class="card-body">
                                     <p class="h4">RecipeMe: Recipe Sharing App</p>
                                     <p class="h6"><em>Django, Bootstrap, Cloudinary, Heroku</em></p>
-                                    <a href="https://github.com/klchambers/pp4" style="font-size: larger;">GitHub Repository</a><br>
-                                    <a href="https://pp4assignment-81282f23e92d.herokuapp.com/" style="font-size: larger;">Live Site</a>
+                                    <a href="https://github.com/klchambers/pp4" style="font-size: larger;" target="_blank">GitHub Repository</a><br>
+                                    <a href="https://pp4assignment-81282f23e92d.herokuapp.com/" style="font-size: larger;" target="_blank">Live Site</a>
                                 </div>
                             </div>
                         </div>
@@ -84,8 +84,8 @@
                                 <div class="card-body">
                                     <p class="h4">To Do List</p>
                                     <p class="h6"><em>Python, Google Sheets API</em></p>
-                                    <a href="https://github.com/klchambers/todo-list" style="font-size: larger;">GitHub Repository</a><br>
-                                    <a href="https://pp3todoapp-ab2e466bceb0.herokuapp.com/" style="font-size: larger;">Live Site</a>
+                                    <a href="https://github.com/klchambers/todo-list" style="font-size: larger;" target="_blank">GitHub Repository</a><br>
+                                    <a href="https://pp3todoapp-ab2e466bceb0.herokuapp.com/" style="font-size: larger;" target="_blank">Live Site</a>
                                 </div>
                             </div>
                         </div>
@@ -99,8 +99,8 @@
                                 <div class="card-body">
                                     <p class="h4">Quizzit</p>
                                     <p class="h6"><em>JavaScript, HTML, CSS</em></p>
-                                    <a href="https://github.com/klchambers/quiz-app" style="font-size: larger;">GitHub Repository</a><br>
-                                    <a href="https://klchambers.github.io/quiz-app/" style="font-size: larger;">Live Site</a>
+                                    <a href="https://github.com/klchambers/quiz-app" style="font-size: larger;" target="_blank">GitHub Repository</a><br>
+                                    <a href="https://klchambers.github.io/quiz-app/" style="font-size: larger;" target="_blank">Live Site</a>
                                 </div>
                             </div>
                         </div>
@@ -113,8 +113,8 @@
                                 <div class="card-body">
                                     <p class="h4">VinVivant Blog</p>
                                     <p class="h6"><em>HTML, CSS, GitHub Pages</em></p>
-                                    <a href="https://github.com/klchambers/VinVivant" style="font-size: larger;">GitHub Repository</a><br>
-                                    <a href="https://klchambers.github.io/VinVivant/" style="font-size: larger;">Live Site</a>
+                                    <a href="https://github.com/klchambers/VinVivant" style="font-size: larger;" target="_blank">GitHub Repository</a><br>
+                                    <a href="https://klchambers.github.io/VinVivant/" style="font-size: larger;" target="_blank">Live Site</a>
                                 </div>
                             </div>
                         </div>
