--- a/templates/base.html
+++ b/templates/base.html
@@ -72,8 +72,8 @@
         <hr>
         <div class="row">
             <div class="col">
-                <a href="https://github.com/klchambers"><i class="fa-brands fa-github display-3"></i></a>
-                <a href="https://www.linkedin.com/in/kieranchamberskc/"><i class="fa-brands fa-linkedin display-3"></i></a>
+                <a href="https://github.com/klchambers" target="_blank"><i class="fa-brands fa-github display-3"></i></a>
+                <a href="https://www.linkedin.com/in/kieranchamberskc/" target="_blank"><i class="fa-brands fa-linkedin display-3"></i></a>
             </div>
         </div>
     </footer>
