Feat: Improve UI by adjusting media query/breakpoints to better accomodate tablet-sized screens

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -48,7 +48,7 @@
                     <div class="col">
                         <!-- Portfolio Card 1 -->
                         <div class="card bg-dark portfolio-card">
-                            <div class="card-content d-md-flex">
+                            <div class="card-content d-lg-flex">
                                 <img class="card-img-top portfolio-image"
                                     src="{% static 'images/glouglou-screencap.png' %}" alt="GlouGlou Screen Capture">
                                     <div class="overlay"></div>
@@ -62,7 +62,7 @@
                         </div>
                         <!-- Portfolio Card 2 -->
                         <div class="card bg-dark portfolio-card">
-                            <div class="card-content d-md-flex flex-row-reverse">
+                            <div class="card-content d-lg-flex flex-row-reverse">
                                 <img class="card-img-top portfolio-image"
                                     src="{% static 'images/recipeme-screencap.png' %}" alt="RecipeMe Screen Capture"
                                     style="justify-self: flex-end;">
@@ -77,7 +77,7 @@
                         </div>
                         <!-- Portfolio Card 3 -->
                         <div class="card bg-dark portfolio-card">
-                            <div class="card-content d-md-flex">
+                            <div class="card-content d-lg-flex">
                                 <img class="card-img-top portfolio-image"
                                     src="{% static 'images/todolist-screencap.png' %}" alt="To Do List Screen Capture">
                                     <div class="overlay"></div>
@@ -91,7 +91,7 @@
                         </div>
                         <!-- Portfolio Card 4 -->
                         <div class="card bg-dark portfolio-card">
-                            <div class="card-content d-md-flex flex-row-reverse">
+                            <div class="card-content d-lg-flex flex-row-reverse">
                                 <img class="card-img-top portfolio-image"
                                     src="{% static 'images/quizzit-screencap.png' %}" alt="Card image cap"
                                     style="justify-self: flex-end;">
@@ -106,7 +106,7 @@
                         </div>
                         <!-- Portfolio Card 5 -->
                         <div class="card bg-dark portfolio-card">
-                            <div class="card-content d-md-flex">
+                            <div class="card-content d-lg-flex">
                                 <img class="card-img-top portfolio-image"
                                     src="{% static 'images/vinvivant-screencap.png' %}" alt="Card image cap">
                                     <div class="overlay"></div>
