Fix: Add url-prefix rule to CSS to amend image layout issue in Firefox

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -57,6 +57,14 @@
                                     <p class="h6"><em>Django, Bootstrap, Cloudinary, Heroku</em></p>
                                     <a href="https://github.com/klchambers/pp5ecommerce" style="font-size: larger;" target="_blank">GitHub Repository</a><br>
                                     <a href="https://pp5ecommerce-a72d5065ca06.herokuapp.com/" style="font-size: larger;" target="_blank">Live Site</a>
+                                    <p><br><br>A mobile-first e-commerce platform for an online wine retailer focusing on biodynamic, and minimal intervention wines. Prioritising a seamless user experience on mobile devices, the website's responsive design ensures optimal display and functionality across various screen sizes and orientations.
+                                        <br><br>
+                                        To foster customer engagement and loyalty, the site integrates with Mailchimp, enabling efficient newsletter signup and targeted email marketing campaigns. Secure and convenient payment processing is facilitated through the Stripe API, safeguarding sensitive customer data and streamlining transactions.
+                                        <br><br>
+                                        User account registration, authentication, and management are handled by AllAuth, providing a robust and secure framework. Authenticated users gain access to exclusive features and benefits, such as submission of questions to the admins and saved payment information.
+                                        <br><br>
+                                        In addition to core e-commerce functionalities, the site also features a blog section, offering valuable content on natural winemaking, food pairings, and industry trends. An FAQ section with published answers from site administrators addresses common customer queries, enhancing transparency and self-service support.
+                                        </p>
                                 </div>
                             </div>
                         </div>
