Feat: Add content to HTML

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -6,7 +6,8 @@
     <div class="row justify-content-center text-center">
         <div class="col-md-6">
             <p class="display-3">Hello!&#128075;</p>
-            <img id="profile-photo" src="{% static '/images/me.jpeg' %}" alt="A photo of me" style="padding-bottom: 25px;">
+            <img id="profile-photo" src="{% static '/images/me.jpeg' %}" alt="A photo of me"
+                style="padding-bottom: 25px;">
             <p class="display-6">I'm <strong>Kieran</strong></p>
         </div>
     </div>
@@ -34,7 +35,8 @@
                     as Bootstrap and Django, as well as databases like PostgreSQL. I enjoy solving complex problems and
                     take a proactive approach to learning new technologies.</p>
 
-                <a href="https://www.linkedin.com/in/kieranchamberskc/" style="font-size: larger;" target="_blank">Connect with me on LinkedIn</a>
+                <a href="https://www.linkedin.com/in/kieranchamberskc/" style="font-size: larger;"
+                    target="_blank">Connect with me on LinkedIn</a>
                 <a href="#contact" style="font-size: larger;">Send me a message</a>
 
             </div>
@@ -51,20 +53,47 @@
                             <div class="card-content d-lg-flex">
                                 <img class="card-img-top portfolio-image"
                                     src="{% static 'images/glouglou-screencap.png' %}" alt="GlouGlou Screen Capture">
-                                    <div class="overlay"></div>
+                                <div class="overlay"></div>
                                 <div class="card-body">
                                     <p class="h4">GlouGlou Natural Wine Store</p>
                                     <p class="h6"><em>Django, Bootstrap, Cloudinary, Heroku</em></p>
-                                    <a href="https://github.com/klchambers/pp5ecommerce" style="font-size: larger;" target="_blank">GitHub Repository</a><br>
-                                    <a href="https://pp5ecommerce-a72d5065ca06.herokuapp.com/" style="font-size: larger;" target="_blank">Live Site</a>
-                                    <p><br><br>A mobile-first e-commerce platform for an online wine retailer focusing on biodynamic, and minimal intervention wines. Prioritising a seamless user experience on mobile devices, the website's responsive design ensures optimal display and functionality across various screen sizes and orientations.
-                                        <br><br>
-                                        To foster customer engagement and loyalty, the site integrates with Mailchimp, enabling efficient newsletter signup and targeted email marketing campaigns. Secure and convenient payment processing is facilitated through the Stripe API, safeguarding sensitive customer data and streamlining transactions.
-                                        <br><br>
-                                        User account registration, authentication, and management are handled by AllAuth, providing a robust and secure framework. Authenticated users gain access to exclusive features and benefits, such as submission of questions to the admins and saved payment information.
-                                        <br><br>
-                                        In addition to core e-commerce functionalities, the site also features a blog section, offering valuable content on natural winemaking, food pairings, and industry trends. An FAQ section with published answers from site administrators addresses common customer queries, enhancing transparency and self-service support.
+                                    <a href="https://github.com/klchambers/pp5ecommerce" style="font-size: larger;"
+                                        target="_blank">GitHub Repository</a><br>
+                                    <a href="https://pp5ecommerce-a72d5065ca06.herokuapp.com/"
+                                        style="font-size: larger;" target="_blank">Live Site</a>
+                                    <hr>
+                                    <span>
+                                        <p>A mobile-first e-commerce platform for an online wine retailer focusing
+                                            on biodynamic, and minimal intervention wines. Prioritising a seamless user
+                                            experience on mobile devices, the website's responsive design ensures
+                                            optimal
+                                            display and functionality across various screen sizes and orientations.
                                         </p>
+                                        <p>To foster customer engagement the site integrates with Mailchimp,
+                                            enabling efficient newsletter signup to targeted email marketing.
+                                            Secure and convenient payment processing is facilitated through the Stripe
+                                            API,
+                                            safeguarding sensitive customer data and streamlining transactions.
+                                        </p>
+                                        <p>
+                                            User account registration, authentication, and management is handled through
+                                            the
+                                            use of
+                                            AllAuth which provides a robust and secure framework. Authenticated users
+                                            gain
+                                            access to exclusive features such as submission of questions to
+                                            the admins and saved payment information.
+                                        </p>
+                                        <p>In addition to core e-commerce functionalities, the site also features a
+                                            blog,
+                                            offering valuable content on natural wine news, informative articles, and
+                                            industry trends. An FAQ section with published answers from site
+                                            administrators
+                                            addresses common customer queries, enhancing transparency and encouraging
+                                            self-service
+                                            support. The user can submit a question, and will receive an email when site
+                                            administrators have answered it and published their answer.</p>
+                                    </span>
                                 </div>
                             </div>
                         </div>
@@ -74,12 +103,32 @@
                                 <img class="card-img-top portfolio-image"
                                     src="{% static 'images/recipeme-screencap.png' %}" alt="RecipeMe Screen Capture"
                                     style="justify-self: flex-end;">
-                                    <div class="overlay"></div>
+                                <div class="overlay"></div>
                                 <div class="card-body">
                                     <p class="h4">RecipeMe: Recipe Sharing App</p>
                                     <p class="h6"><em>Django, Bootstrap, Cloudinary, Heroku</em></p>
-                                    <a href="https://github.com/klchambers/pp4" style="font-size: larger;" target="_blank">GitHub Repository</a><br>
-                                    <a href="https://pp4assignment-81282f23e92d.herokuapp.com/" style="font-size: larger;" target="_blank">Live Site</a>
+                                    <a href="https://github.com/klchambers/pp4" style="font-size: larger;"
+                                        target="_blank">GitHub Repository</a><br>
+                                    <a href="https://pp4assignment-81282f23e92d.herokuapp.com/"
+                                        style="font-size: larger;" target="_blank">Live Site</a>
+                                    <hr>
+                                    <span>
+                                        <p>RecipeMe is a social recipe platform that allows users to share and discover
+                                            recipes.
+                                            User authentication, registration, and management is achieved using Django
+                                            AllAuth.
+                                        </p>
+                                        <p>Once registered and logged in, users can submit recipes, which must be
+                                            approved by an administrator to prevent spam and maintain content quality.
+                                            Each
+                                            recipe includes ingredients, cooking time, and an image.
+                                        </p>
+                                        <p>Authenticated users can also
+                                            post comments on recipes to share their thoughts and feedback to the poster
+                                            and others, these comments also require admin approval before they are
+                                            published.
+                                        </p>
+                                    </span>
                                 </div>
                             </div>
                         </div>
@@ -88,12 +137,28 @@
                             <div class="card-content d-lg-flex">
                                 <img class="card-img-top portfolio-image"
                                     src="{% static 'images/todolist-screencap.png' %}" alt="To Do List Screen Capture">
-                                    <div class="overlay"></div>
+                                <div class="overlay"></div>
                                 <div class="card-body">
                                     <p class="h4">To Do List</p>
                                     <p class="h6"><em>Python, Google Sheets API</em></p>
-                                    <a href="https://github.com/klchambers/todo-list" style="font-size: larger;" target="_blank">GitHub Repository</a><br>
-                                    <a href="https://pp3todoapp-ab2e466bceb0.herokuapp.com/" style="font-size: larger;" target="_blank">Live Site</a>
+                                    <a href="https://github.com/klchambers/todo-list" style="font-size: larger;"
+                                        target="_blank">GitHub Repository</a><br>
+                                    <a href="https://pp3todoapp-ab2e466bceb0.herokuapp.com/" style="font-size: larger;"
+                                        target="_blank">Live Site</a>
+                                    <hr>
+                                    <span>
+                                        <p>This Python Command Line Interface application allows users to manage
+                                            their to-do list by adding tasks and marking them as complete.
+                                            The application uses the Google Sheets API and two worksheets ("ToDo" and
+                                            "Completed") to store and track tasks.</p>
+                                        <p>While the application is designed to
+                                            be run in the Terminal, it is also hosted on Heroku for demonstration
+                                            purposes, with some changes to data exporting functionality. Locally, the
+                                            application saves user data in CSV format to the user's Downloads folder. In
+                                            the Heroku-deployed version, a new Spreadsheet is created and the link is
+                                            shared with the user, who can then download/export their data via Google
+                                            Docs.</p>
+                                    </span>
                                 </div>
                             </div>
                         </div>
@@ -103,12 +168,28 @@
                                 <img class="card-img-top portfolio-image"
                                     src="{% static 'images/quizzit-screencap.png' %}" alt="Card image cap"
                                     style="justify-self: flex-end;">
-                                    <div class="overlay"></div>
+                                <div class="overlay"></div>
                                 <div class="card-body">
                                     <p class="h4">Quizzit</p>
                                     <p class="h6"><em>JavaScript, HTML, CSS</em></p>
-                                    <a href="https://github.com/klchambers/quiz-app" style="font-size: larger;" target="_blank">GitHub Repository</a><br>
-                                    <a href="https://klchambers.github.io/quiz-app/" style="font-size: larger;" target="_blank">Live Site</a>
+                                    <a href="https://github.com/klchambers/quiz-app" style="font-size: larger;"
+                                        target="_blank">GitHub Repository</a><br>
+                                    <a href="https://klchambers.github.io/quiz-app/" style="font-size: larger;"
+                                        target="_blank">Live Site</a>
+                                    <hr>
+                                    <span>
+                                        <p>Quizzit is a mobile-first web application that allows users to test their
+                                            knowledge by answering general knowledge and trivia questions.</p>
+                                        <p>The app consists of a single HTML document with content displayed or hidden
+                                            depending on the stage of the quiz. The user is initially shown an
+                                            introduction section where they are asked to input their username and select
+                                            the 'Start quizzing' button to begin.</p>
+                                        <p>Users are given 10 questions to answer. After selecting an answer, their
+                                            choice is displayed in green or red to indicate whether the answer is
+                                            correct or incorrect. The user's score increases by one point for each
+                                            correct answer. After completing all 10 questions, the user is shown their
+                                            final score and given the option to play again.</p>
+                                    </span>
                                 </div>
                             </div>
                         </div>
@@ -117,12 +198,26 @@
                             <div class="card-content d-lg-flex">
                                 <img class="card-img-top portfolio-image"
                                     src="{% static 'images/vinvivant-screencap.png' %}" alt="Card image cap">
-                                    <div class="overlay"></div>
+                                <div class="overlay"></div>
                                 <div class="card-body">
                                     <p class="h4">VinVivant Blog</p>
                                     <p class="h6"><em>HTML, CSS, GitHub Pages</em></p>
-                                    <a href="https://github.com/klchambers/VinVivant" style="font-size: larger;" target="_blank">GitHub Repository</a><br>
-                                    <a href="https://klchambers.github.io/VinVivant/" style="font-size: larger;" target="_blank">Live Site</a>
+                                    <a href="https://github.com/klchambers/VinVivant" style="font-size: larger;"
+                                        target="_blank">GitHub Repository</a><br>
+                                    <a href="https://klchambers.github.io/VinVivant/" style="font-size: larger;"
+                                        target="_blank">Live Site</a>
+                                    <hr>
+                                    <span>
+                                        <p>VinVivant is a blog about natural wine featuring natural wine reviews, with
+                                            the option for the user to sign up to a newsletter to receive blog posts via
+                                            email, and a contact form to enter their contact details and send a message.
+                                        </p>
+                                        <p>It is primarily targeted at those with an interest in wine and natural
+                                            winemaking, but the informative nature of the site will make it ideal for
+                                            those without prior knowledge to learn more, with the potential to add blog
+                                            posts about different grape varietals, winemaking regions, terminology, and
+                                            styles.</p>
+                                    </span>
                                 </div>
                             </div>
                         </div>
