Feat: Update content

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -15,7 +15,7 @@
     <!-- About Me -->
     <div class="row justify-content-center text-center mt-3" id="about">
         <div class="col-md-7">
-            <p>A <strong>Full Stack Developer</strong> skilled in:</p>
+            <p class="bio-2">A Full Stack Developer skilled in</p>
             <div class="row">
                 <div class="col">
                     <ul>
@@ -64,7 +64,7 @@
                                     <hr>
                                     <span>
                                         <p>A mobile-first e-commerce platform for an online wine retailer focusing
-                                            on biodynamic, and minimal intervention wines. Prioritising a seamless user
+                                            on biodynamic and minimal intervention wines. Prioritising a seamless user
                                             experience on mobile devices, the website's responsive design ensures
                                             optimal
                                             display and functionality across various screen sizes and orientations.
