--- a/staticfiles/css/base.css
+++ b/staticfiles/css/base.css
@@ -93,12 +93,16 @@ a:hover {
 }
 
 .list-item {
-  font-size: 1rem;
-  transition: all 0.2s ease-in-out;
+  font-size: 1.5rem;
+  transition: all 0.3s ease-in-out;
 }
 
 .list-item:hover {
   transform: scale(1.5);
+}
+
+.bio-2 {
+  font-size: 1.25rem;
 }
 
 .card {
