--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load honeypot %}
 
 {% block content %}
 <div class="container page-content" id="home">
@@ -232,6 +233,7 @@
                 <form method="post" class="mt-3 form-container">
                     {% csrf_token %}
                     {{ form.as_p }}
+                    {% render_honeypot_field HONEYPOT_FIELD_NAME %}
                     <button type="submit" class="btn btn-secondary" id="submit-button">Submit Message</button>
                 </form>
             </div>
